# comply-core

./: .gitignore  LICENSE  README.md  pyproject.toml
comply_core/: __init__.py  cli.py  config.py  exceptions.py
comply_core/collectors/: __init__.py  azure_resource.py  base.py  defender.py  document.py  manual.py  microsoft_graph.py
comply_core/mappers/: __init__.py  control_mapper.py  evaluator.py  framework.py
comply_core/reports/: __init__.py  generator.py
comply_core/reports/templates/: base.html  control_detail.html  evidence_pack.html  executive_summary.html  gap_report.html
comply_core/store/: __init__.py  evidence_store.py  integrity.py
comply_core/utils/: __init__.py  graph_client.py  logging.py
docs/: collectors.md  mappings.md  setup.md
mappings/: iso27001-2022.yaml
tests/: conftest.py  test_cli.py
tests/fixtures/graph_responses/: conditional_access.json  devices.json  directory_roles.json  mfa_registration.json  users.json
tests/test_collectors/: test_manual.py  test_microsoft_graph.py
tests/test_mappers/: test_control_mapper.py  test_evaluator.py
tests/test_store/: test_evidence_store.py  test_integrity.py
