[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comply-core"
version = "0.1.0"
description = "Open-source evidence collection engine for ISO 27001:2022 compliance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Arjun Myanger" },
]
keywords = ["iso27001", "compliance", "evidence", "audit", "microsoft365"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "msal>=1.24",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.5",
]
pdf = [
    "weasyprint>=60.0",
]
docs = [
    "pypdf>=4.0",
]
llm = [
    "anthropic>=0.39",
]

[project.scripts]
comply-core = "comply_core.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["comply_core"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real Azure AD credentials (not run in CI)",
]
